[package]
name = "go-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { git = "https://github.com/zkat/miette", branch = "release/3.0.0", features = ["fancy"] }
nom = { version = "7.0.0", features = ["alloc"] }
nom-supreme = "0.6.0"
nom_locate = "4.0.0"
thiserror = "1.0.29"
